bk_ida/mcfida/c3/refresh_neighbour_lists
mcfutil.c:501:12: error: expected expression
*( _OWORD *)&nodes->firstout = 0LL; 
           ^
mcfutil.c:501:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&nodes->firstout = 0LL; 
   ^
2 errors generated.
